--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <header>
-      <img src="imgs/logoSmall.jpg" alt="" class="LOGO" />
+      <img src="imgs/logoRondel.png" alt="" class="LOGO" />
     </header>
     <main></main>
     <footer></footer>
