more nav work, added links

--- a/index.html
+++ b/index.html
@@ -14,11 +14,29 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chango&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
       <img src="imgs/logoRondel.png" alt="" class="LOGO" />
+      <div class="rondel"></div>
+      <div class="links">
+        <div class="side">
+          <div class="link">About</div>
+          <div class="link">Tech</div>
+        </div>
+        <div class="divide"></div>
+        <div class="side">
+          <div class="link">Courses</div>
+          <div class="link">Sports</div>
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
