--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <div class="hero">
+      <img src="imgs/hero.jpg" />
+    </div>
+    <main style="height: 1000px"></main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
