made nav selection

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       href="https://fonts.googleapis.com/css2?family=Chango&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -38,10 +44,10 @@
         </div>
       </div>
     </header>
-    <div class="hero">
-      <img src="imgs/hero.jpg" />
-    </div>
-    <main style="height: 1000px"></main>
+    <div class="hero"></div>
+    <main>
+      <div id="quote">RIT</div>
+    </main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -53,5 +59,6 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
