the scroll function works! Maybe clean it up at some point

--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
     <div class="hero"></div>
     <main>
       <div id="quote">RIT</div>
+      <br /><br /><br />
+      <br /><br /><br />
+
+      <div class="heading">About</div>
+
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
+      <br /><br /><br />
     </main>
     <footer></footer>
     <script
