added parallaxes and added all links

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -47,21 +53,23 @@
     <div class="hero"></div>
     <main>
       <div id="quote">RIT</div>
-      <br /><br /><br />
-      <br /><br /><br />
-
-      <div class="heading">About</div>
-
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
+      <div class="parallax p1"></div>
+      <div class="heading h-1">
+        <div class="text">About</div>
+      </div>
+      <div class="parallax p2"></div>
+      <div class="heading h-2">
+        <div class="text">Courses</div>
+      </div>
+      <div class="parallax p3"></div>
+      <div class="heading h-3">
+        <div class="text">Tech</div>
+      </div>
+      <div class="parallax p4"></div>
+      <div class="heading h-4">
+        <div class="text">Sports</div>
+      </div>
+      <div class="parallax p5"></div>
     </main>
     <footer></footer>
     <script
