--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     />
   </head>
 
-  <body>
+  <body class="container-fluid">
     <header>
       <img src="imgs/logoRondel.png" alt="" class="LOGO" />
       <div class="rondel"></div>
@@ -52,26 +52,79 @@
     </header>
     <div class="hero"></div>
     <main>
-      <div id="quote">RIT</div>
+      <div id="quote">
+        <div class="quoteText"></div>
+        <div class="name">— RIT</div>
+      </div>
       <div class="parallax p1"></div>
       <div class="heading h-1">
-        <div class="text">About</div>
+        <div class="text linkTo">About</div>
       </div>
       <div class="parallax p2"></div>
       <div class="heading h-2">
-        <div class="text">Courses</div>
+        <div class="text linkTo">Courses</div>
       </div>
       <div class="parallax p3"></div>
       <div class="heading h-3">
-        <div class="text">Tech</div>
+        <div class="text linkTo">Tech</div>
       </div>
       <div class="parallax p4"></div>
       <div class="heading h-4">
-        <div class="text">Sports</div>
+        <div class="text linkTo">Sports</div>
       </div>
       <div class="parallax p5"></div>
     </main>
-    <footer></footer>
+    <footer class="row">
+      <div class="col-12 col-sm-6 col-md-4 section">
+        <div class="links">
+          <a href="https://www.rit.edu/admissions/financial-aid" target="_blank"
+            >Financial Aid</a
+          ><br />
+          585-475-2186 ritaid@rit.edu
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 section">
+        <div class="links">
+          <a href="https://www.rit.edu/housing/" target="_blank">Housing</a
+          ><br />
+          585-475-5000 help.rit.edu
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 section">
+        <div class="links">
+          <a href="https://www.rit.edu/studentlife/departments" target="_blank"
+            >Student Affairs</a
+          ><br />
+          585-475-2265 studentaffairs@rit.edu
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 section">
+        <div class="links">
+          <a
+            href="https://www.rit.edu/admissions/first-year-application"
+            target="_blank"
+            >Undergraduate Admissions</a
+          ><br />
+          585-475-6631 admissions@rit.edu
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 section">
+        <div class="links">
+          <a href="https://help.rit.edu/csp" target="_blank"
+            >RIT Service Center</a
+          ><br />
+          585-475-5000 help.rit.edu
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 section">
+        <div class="links">
+          <a href="https://www.rit.edu/admissions/graduate" target="_blank"
+            >Graduate Admissions V/TTY:</a
+          ><br />
+          585-475-2229 1-866-260-3950 gradinfo@rit.edu
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
