added footer, but needs some more styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
       href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@0,300..700;1,300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body class="container-fluid">
@@ -79,14 +85,13 @@
         <div class="links">
           <a href="https://www.rit.edu/admissions/financial-aid" target="_blank"
             >Financial Aid</a
-          ><br />
+          >
           585-475-2186 ritaid@rit.edu
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 section">
         <div class="links">
-          <a href="https://www.rit.edu/housing/" target="_blank">Housing</a
-          ><br />
+          <a href="https://www.rit.edu/housing/" target="_blank">Housing</a>
           585-475-5000 help.rit.edu
         </div>
       </div>
@@ -94,7 +99,7 @@
         <div class="links">
           <a href="https://www.rit.edu/studentlife/departments" target="_blank"
             >Student Affairs</a
-          ><br />
+          >
           585-475-2265 studentaffairs@rit.edu
         </div>
       </div>
@@ -104,7 +109,7 @@
             href="https://www.rit.edu/admissions/first-year-application"
             target="_blank"
             >Undergraduate Admissions</a
-          ><br />
+          >
           585-475-6631 admissions@rit.edu
         </div>
       </div>
@@ -112,7 +117,7 @@
         <div class="links">
           <a href="https://help.rit.edu/csp" target="_blank"
             >RIT Service Center</a
-          ><br />
+          >
           585-475-5000 help.rit.edu
         </div>
       </div>
@@ -120,7 +125,7 @@
         <div class="links">
           <a href="https://www.rit.edu/admissions/graduate" target="_blank"
             >Graduate Admissions V/TTY:</a
-          ><br />
+          >
           585-475-2229 1-866-260-3950 gradinfo@rit.edu
         </div>
       </div>
