very cool footer!

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
       <img src="imgs/logoRondel.png" alt="" class="LOGO" />
       <div class="rondel"></div>
-      <div class="links">
+      <div class="links d-none d-sm-flex">
         <div class="side">
           <div class="link">About</div>
           <div class="link">Tech</div>
@@ -81,52 +81,70 @@
       <div class="parallax p5"></div>
     </main>
     <footer class="row">
-      <div class="col-12 col-sm-6 col-md-4 section">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
         <div class="links">
           <a href="https://www.rit.edu/admissions/financial-aid" target="_blank"
             >Financial Aid</a
           >
-          585-475-2186 ritaid@rit.edu
+          <p class="stagger">585-475-2186</p>
+          <a class="noLine" href="mailto:ritaid@rit.edu" target="_blank"
+            >ritaid@rit.edu</a
+          >
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 section">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
         <div class="links">
           <a href="https://www.rit.edu/housing/" target="_blank">Housing</a>
-          585-475-5000 help.rit.edu
+          <p class="stagger">585-475-5000</p>
+          <a class="noLine" href="mailto:help.rit.edu" target="_blank"
+            >help.rit.edu</a
+          >
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 section">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
         <div class="links">
           <a href="https://www.rit.edu/studentlife/departments" target="_blank"
             >Student Affairs</a
           >
-          585-475-2265 studentaffairs@rit.edu
+          <div class="stagger">585-475-2265</div>
+          <a class="noLine" href="mailto:studentaffairs@rit.edu" target="_blank"
+            >studentaffairs@rit.edu
+          </a>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 section">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
         <div class="links">
           <a
             href="https://www.rit.edu/admissions/first-year-application"
             target="_blank"
             >Undergraduate Admissions</a
           >
-          585-475-6631 admissions@rit.edu
+          <p class="stagger">585-475-6631</p>
+          <a class="noLine" href="mailto:admissions@rit.edu" target="_blank"
+            >admissions@rit.edu</a
+          >
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 section">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
         <div class="links">
           <a href="https://help.rit.edu/csp" target="_blank"
             >RIT Service Center</a
           >
-          585-475-5000 help.rit.edu
+          <p class="stagger">585-475-5000</p>
+          <a class="noLine" href="mailto:help.rit.edu" target="_blank"
+            >help.rit.edu</a
+          >
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 section">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
         <div class="links">
           <a href="https://www.rit.edu/admissions/graduate" target="_blank"
-            >Graduate Admissions V/TTY:</a
+            >Graduate Admissions</a
           >
-          585-475-2229 1-866-260-3950 gradinfo@rit.edu
+          <p class="stagger">585-475-2229</p>
+          <a class="noLine" href="mailto:gradinfo@rit.edu" target="_blank"
+            >gradinfo@rit.edu
+          </a>
         </div>
       </div>
     </footer>
