--- a/index.html
+++ b/index.html
@@ -82,69 +82,112 @@
     </main>
     <footer class="row">
       <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
-        <div class="links">
-          <a href="https://www.rit.edu/admissions/financial-aid" target="_blank"
-            >Financial Aid</a
-          >
-          <p class="stagger">585-475-2186</p>
-          <a class="noLine" href="mailto:ritaid@rit.edu" target="_blank"
-            >ritaid@rit.edu</a
-          >
+        <div class="links row">
+          <div class="col-4 col-sm-12">
+            <a
+              href="https://www.rit.edu/admissions/financial-aid"
+              target="_blank"
+              >Financial Aid</a
+            >
+          </div>
+          <div class="col-4 col-sm-12">
+            <p class="stagger">585-475-2186</p>
+          </div>
+          <div class="col-4 col-sm-12">
+            <a class="noLine" href="mailto:ritaid@rit.edu" target="_blank"
+              >ritaid@rit.edu</a
+            >
+          </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
-        <div class="links">
-          <a href="https://www.rit.edu/housing/" target="_blank">Housing</a>
-          <p class="stagger">585-475-5000</p>
-          <a class="noLine" href="mailto:help.rit.edu" target="_blank"
-            >help.rit.edu</a
-          >
+        <div class="links row">
+          <div class="col-4 col-sm-12">
+            <a href="https://www.rit.edu/housing/" target="_blank">Housing</a>
+          </div>
+          <div class="col-4 col-sm-12">
+            <p class="stagger">585-475-5000</p>
+          </div>
+          <div class="col-4 col-sm-12">
+            <a class="noLine" href="mailto:help.rit.edu" target="_blank"
+              >help.rit.edu</a
+            >
+          </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
-        <div class="links">
-          <a href="https://www.rit.edu/studentlife/departments" target="_blank"
-            >Student Affairs</a
-          >
-          <div class="stagger">585-475-2265</div>
-          <a class="noLine" href="mailto:studentaffairs@rit.edu" target="_blank"
-            >studentaffairs@rit.edu
-          </a>
+        <div class="links row">
+          <div class="col-4 col-sm-12">
+            <a
+              href="https://www.rit.edu/studentlife/departments"
+              target="_blank"
+              >Student Affairs</a
+            >
+          </div>
+          <div class="col-4 col-sm-12">
+            <div class="stagger">585-475-2265</div>
+          </div>
+          <div class="col-4 col-sm-12" id="affairs">
+            <a
+              class="noLine"
+              href="mailto:studentaffairs@rit.edu"
+              target="_blank"
+              >studentaffairs@rit.edu
+            </a>
+          </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
-        <div class="links">
-          <a
-            href="https://www.rit.edu/admissions/first-year-application"
-            target="_blank"
-            >Undergraduate Admissions</a
-          >
-          <p class="stagger">585-475-6631</p>
-          <a class="noLine" href="mailto:admissions@rit.edu" target="_blank"
-            >admissions@rit.edu</a
-          >
+        <div class="links row">
+          <div class="col-4 col-sm-12">
+            <a
+              href="https://www.rit.edu/admissions/first-year-application"
+              target="_blank"
+              >Undergraduate Admissions</a
+            >
+          </div>
+          <div class="col-4 col-sm-12">
+            <p class="stagger">585-475-6631</p>
+          </div>
+          <div class="col-4 col-sm-12">
+            <a class="noLine" href="mailto:admissions@rit.edu" target="_blank"
+              >admissions@rit.edu</a
+            >
+          </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
-        <div class="links">
-          <a href="https://help.rit.edu/csp" target="_blank"
-            >RIT Service Center</a
-          >
-          <p class="stagger">585-475-5000</p>
-          <a class="noLine" href="mailto:help.rit.edu" target="_blank"
-            >help.rit.edu</a
-          >
+        <div class="links row">
+          <div class="col-4 col-sm-12">
+            <a href="https://help.rit.edu/csp" target="_blank"
+              >RIT Service Center</a
+            >
+          </div>
+          <div class="col-4 col-sm-12">
+            <p class="stagger">585-475-5000</p>
+          </div>
+          <div class="col-4 col-sm-12">
+            <a class="noLine" href="mailto:help.rit.edu" target="_blank"
+              >help.rit.edu</a
+            >
+          </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-2 section">
-        <div class="links">
-          <a href="https://www.rit.edu/admissions/graduate" target="_blank"
-            >Graduate Admissions</a
-          >
-          <p class="stagger">585-475-2229</p>
-          <a class="noLine" href="mailto:gradinfo@rit.edu" target="_blank"
-            >gradinfo@rit.edu
-          </a>
+        <div class="links row">
+          <div class="col-4 col-sm-12">
+            <a href="https://www.rit.edu/admissions/graduate" target="_blank"
+              >Graduate Admissions</a
+            >
+          </div>
+          <div class="col-4 col-sm-12">
+            <p class="stagger">585-475-2229</p>
+          </div>
+          <div class="col-4 col-sm-12">
+            <a class="noLine" href="mailto:gradinfo@rit.edu" target="_blank"
+              >gradinfo@rit.edu
+            </a>
+          </div>
         </div>
       </div>
     </footer>
