finished offcanvas, I think. The website is ready for content

--- a/index.html
+++ b/index.html
@@ -108,7 +108,15 @@
           aria-label="Close"
         ></button>
       </div>
-      <div class="offcanvas-body"></div>
+      <div class="offcanvas-body">
+        <div class="links">
+          <div class="link" data-bs-dismiss="offcanvas">About</div>
+          <div class="link" data-bs-dismiss="offcanvas">Tech</div>
+          <div class="link" data-bs-dismiss="offcanvas">Courses</div>
+          <div class="link" data-bs-dismiss="offcanvas">Sports</div>
+          <div class="toTop" data-bs-dismiss="offcanvas">To Top</div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
