--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       href="https://fonts.googleapis.com/css2?family=Yrsa:ital,wght@0,300..700;1,300..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon" />
   </head>
 
   <body class="container-fluid">
@@ -77,6 +78,30 @@
       <div class="parallax p1"></div>
       <div class="heading h-1">
         <div class="text linkTo">About</div>
+        <div class="row">
+          <div class="col-12 col-md-7">
+            At Rochester Institute of Technology, we shape the future and
+            improve the world through creativity and innovation. We are an
+            engaged, intellectually curious, and socially conscious community
+            that’s leveraging the power of technology, the arts, and design for
+            the greater good
+          </div>
+          <div class="col-12 col-md-5">
+            <img src="imgs/graduates.jpg" alt="" class="img-flui w-100" />
+          </div>
+          <div
+            class="col-12 text text-center"
+            data-bs-toggle="collapse"
+            data-bs-target="#majorsCollapse"
+            aria-expanded="false"
+            aria-controls="majorsCollapse"
+          >
+            Click to view Majors
+          </div>
+          <div class="col-12">
+            <div class="collapse" id="majorsCollapse">Majors list</div>
+          </div>
+        </div>
       </div>
       <div class="parallax p2"></div>
       <div class="heading h-2">
