--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             Click to view Majors
           </div>
           <div class="col-12">
-            <div class="collapse" id="majorsCollapse">Majors list</div>
+            <div class="collapse row" id="majorsCollapse"></div>
           </div>
         </div>
       </div>
