--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
       <div class="links d-none d-sm-flex">
         <div class="side">
           <div class="link">About</div>
-          <div class="link">Tech</div>
+          <div class="link">Courses</div>
         </div>
         <div class="divide"></div>
         <div class="side">
-          <div class="link">Courses</div>
+          <div class="link">Tech</div>
           <div class="link">Sports</div>
         </div>
       </div>
@@ -79,15 +79,63 @@
       <div class="heading h-1">
         <div class="text linkTo">About</div>
         <div class="row">
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-md-7 col-lg-8 col-xl-9 col-xxl-10">
             At Rochester Institute of Technology, we shape the future and
             improve the world through creativity and innovation. We are an
             engaged, intellectually curious, and socially conscious community
             that’s leveraging the power of technology, the arts, and design for
-            the greater good
+            the greater good. <br /><br />Rochester Institute of Technology is
+            located in Henrietta, Rochester, NY. It was founded in 1829, and is
+            one of two technology institutes in New York. RIT's mascot is
+            Ritchie the Tiger (RIT-chie).
           </div>
-          <div class="col-12 col-md-5">
+          <div class="col-12 col-md-5 col-lg-4 col-xl-3 col-xxl-2">
             <img src="imgs/graduates.jpg" alt="" class="img-flui w-100" />
+          </div>
+          <div
+            class="col-12 text text-center"
+            data-bs-toggle="collapse"
+            data-bs-target="#statisticsCollapse"
+            aria-expanded="false"
+            aria-controls="statisticsCollapse"
+          >
+            Click to View Statistics
+          </div>
+          <div class="col-12">
+            <div class="collapse row" id="statisticsCollapse">
+              <ul>
+                <li>
+                  In 2025, RIT ranked as the #88 top school in America against
+                  400 other schools
+                </li>
+                <li>RIT is #3 in Game / Simulation Development</li>
+                <li>RIT is #5 in Co-ops / Internships</li>
+                <li>
+                  RIT has a student body of approximately 17,000, and enrolls
+                  approximately 14,000 each year.
+                </li>
+                <li>49% of the students live on-campus</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="parallax p2"></div>
+      <div class="heading h-2">
+        <div class="text linkTo">Courses</div>
+        <div class="row">
+          <div class="col-12 col-md-5 col-lg-4 col-xl-3 col-xxl-2">
+            <img src="imgs/shed.jpg" alt="" class="img-flui w-100" />
+          </div>
+          <div class="col-12 col-md-7 col-lg-8 col-xl-9 col-xxl-10">
+            RIT offers many different subjects across many different fields of
+            study. However, RIT is, as an institute of technology, primarily
+            focused on digital, engineering, and "hardware" skills, but
+            unusually has an artistic twist in the form of very good film,
+            animation, and game design programs.<br /><br />
+            One of RIT's well-known successes is the implementation of co-ops,
+            which are paid internships that frequently land jobs after college,
+            and are integral to many of RIT's courses.
           </div>
           <div
             class="col-12 text text-center"
@@ -98,14 +146,12 @@
           >
             Click to view Majors
           </div>
-          <div class="col-12">
-            <div class="collapse row" id="majorsCollapse"></div>
+          <div class="row">
+            <div class="col-12">
+              <div class="collapse row" id="majorsCollapse"></div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="parallax p2"></div>
-      <div class="heading h-2">
-        <div class="text linkTo">Courses</div>
       </div>
       <div class="parallax p3"></div>
       <div class="heading h-3">
