added campus section and side margins

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="divide"></div>
         <div class="side">
           <div class="link">Tech</div>
-          <div class="link">Sports</div>
+          <div class="link">Campus</div>
         </div>
       </div>
     </header>
@@ -159,7 +159,93 @@
       </div>
       <div class="parallax p4"></div>
       <div class="heading h-4">
-        <div class="text linkTo">Sports</div>
+        <div class="text linkTo">Campus</div>
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-7 col-lg-8 mb-3">
+            RIT is located in Henrietta, Rochester, New York. It has a suburban
+            campus with plenty of green and light. Due to the coldness of the
+            winter, a tunnel network exists below the campus to allow for
+            subterranean transit when the outside ground is icy.<br /><br />RIT
+            is also right next to Lake Erie, and due to this is receives a high
+            snowfall but also has classes in Kayaking and Flyfishing.
+          </div>
+          <div class="col-12 col-md-5 col-lg-4">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2913.9411916933186!2d-77.6715248!3d43.0847317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d14c603a147e55%3A0xbe7eb31ed5e22c03!2sRochester%20Institute%20of%20Technology!5e0!3m2!1sen!2sus!4v1758861277232!5m2!1sen!2sus"
+              width="100%"
+              height="100%"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="col-12 col-md-6 mt-3">
+            <div id="ritCarousel" class="carousel slide carousel-fade">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="imgs/carousel1.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="imgs/carousel2.jpeg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="imgs/carousel3.jpeg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="imgs/carousel4.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="imgs/carousel5.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#ritCarousel"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#ritCarousel"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="parallax p5"></div>
     </main>
@@ -182,9 +268,9 @@
       <div class="offcanvas-body">
         <div class="links">
           <div class="link" data-bs-dismiss="offcanvas">About</div>
-          <div class="link" data-bs-dismiss="offcanvas">Tech</div>
           <div class="link" data-bs-dismiss="offcanvas">Courses</div>
-          <div class="link" data-bs-dismiss="offcanvas">Sports</div>
+          <div class="link" data-bs-dismiss="offcanvas">Tech</div>
+          <div class="link" data-bs-dismiss="offcanvas">Campus</div>
           <div class="toTop" data-bs-dismiss="offcanvas">To Top</div>
         </div>
       </div>
