done with CAMPUS. Man this website wants a lot, I pity those doing what I am doing right now but MORE AND LONGER

--- a/index.html
+++ b/index.html
@@ -167,7 +167,15 @@
             winter, a tunnel network exists below the campus to allow for
             subterranean transit when the outside ground is icy.<br /><br />RIT
             is also right next to Lake Erie, and due to this is receives a high
-            snowfall but also has classes in Kayaking and Flyfishing.
+            snowfall but also has classes in Kayaking and Flyfishing.<br /><br />
+            RIT has multiple housing options for students participating in
+            different programs and in-school colleges, with some being "suite
+            style" and others "apartment style". The typical cost of housing at
+            RIT is roughly $5,000 per semester with slight fluctuations for
+            style of room and number of occupants.<br /><br />There are several
+            eating places on Campus besides the cafeteria, and there is also a
+            tech-repair shop. The SHED is an enormous makerspace available to
+            all majors.
           </div>
           <div class="col-12 col-md-5 col-lg-4">
             <iframe
@@ -244,6 +252,18 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
+          </div>
+          <div
+            class="col-12 text text-center"
+            data-bs-toggle="collapse"
+            data-bs-target="#clubsCollapse"
+            aria-expanded="false"
+            aria-controls="clubsCollapse"
+          >
+            Click to View Clubs
+          </div>
+          <div class="col-12">
+            <div class="collapse row" id="clubsCollapse"></div>
           </div>
         </div>
       </div>
