finished building ABOUT

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="divide"></div>
         <div class="side">
-          <div class="link">Tech</div>
+          <div class="link">Alumni</div>
           <div class="link">Campus</div>
         </div>
       </div>
@@ -79,17 +79,26 @@
       <div class="heading h-1">
         <div class="text linkTo">About</div>
         <div class="row">
-          <div class="col-12 col-md-7 col-lg-8 col-xl-9 col-xxl-10">
-            At Rochester Institute of Technology, we shape the future and
-            improve the world through creativity and innovation. We are an
-            engaged, intellectually curious, and socially conscious community
-            that’s leveraging the power of technology, the arts, and design for
-            the greater good. <br /><br />Rochester Institute of Technology is
-            located in Henrietta, Rochester, NY. It was founded in 1829, and is
-            one of two technology institutes in New York. RIT's mascot is
-            Ritchie the Tiger (RIT-chie).
+          <div class="col-12 col-md-7">
+            &nbsp;&nbsp;At Rochester Institute of Technology, we shape the
+            future and improve the world through creativity and innovation. We
+            are an engaged, intellectually curious, and socially conscious
+            community that’s leveraging the power of technology, the arts, and
+            design for the greater good. <br />
+            &nbsp;&nbsp;Rochester Institute of Technology is located in
+            Henrietta, Rochester, NY. It was founded in 1829, and is one of two
+            technology institutes in New York. RIT's mascot is Ritchie the Tiger
+            (RIT-chie).<br />
+            &nbsp;&nbsp; Tuition: $57,000 per year<br />
+            &nbsp;&nbsp; Deadlines:
+            <ul>
+              <li>Early Decision I: Nov 1</li>
+              <li>Early Decision II: Jan 1</li>
+              <li>Early Action: Nov 1</li>
+              <li>Regular Decision: Jan 15</li>
+            </ul>
           </div>
-          <div class="col-12 col-md-5 col-lg-4 col-xl-3 col-xxl-2">
+          <div class="col-12 col-md-5">
             <img src="imgs/graduates.jpg" alt="" class="img-flui w-100" />
           </div>
           <div
@@ -155,7 +164,7 @@
       </div>
       <div class="parallax p3"></div>
       <div class="heading h-3">
-        <div class="text linkTo">Tech</div>
+        <div class="text linkTo">Alumni</div>
       </div>
       <div class="parallax p4"></div>
       <div class="heading h-4">
@@ -289,7 +298,7 @@
         <div class="links">
           <div class="link" data-bs-dismiss="offcanvas">About</div>
           <div class="link" data-bs-dismiss="offcanvas">Courses</div>
-          <div class="link" data-bs-dismiss="offcanvas">Tech</div>
+          <div class="link" data-bs-dismiss="offcanvas">Alumni</div>
           <div class="link" data-bs-dismiss="offcanvas">Campus</div>
           <div class="toTop" data-bs-dismiss="offcanvas">To Top</div>
         </div>
