--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
       <div class="parallax p3"></div>
       <div class="heading h-3">
         <div class="text linkTo">Alumni</div>
+        <div class="row" id="alumni"></div>
       </div>
       <div class="parallax p4"></div>
       <div class="heading h-4">
