--- a/index.html
+++ b/index.html
@@ -165,6 +165,33 @@
       <div class="parallax p3"></div>
       <div class="heading h-3">
         <div class="text linkTo">Alumni</div>
+        <div class="row">
+          <div class="col-12 col-md-7">
+            RIT students have a 94% chance for graduate employment, and an 88.3%
+            chance for undergrad employment. RIT has partnerships with:
+            <ul>
+              <li>Amazon</li>
+              <li>Wegmans</li>
+              <li>Kodak</li>
+              <li>Apple</li>
+              <li>KEEN</li>
+            </ul>
+            RIT has interships and co-ops with almost any company of the
+            student's choice, arranged by their counselor. These include:
+            <ul>
+              <li>Netflix</li>
+              <li>Amazon</li>
+              <li>Apple</li>
+              <li>Disney</li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-5">
+            <img class="img-fluid" src="imgs/students.jpg" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 text text-center">Notable Alumni</div>
+        </div>
         <div class="row" id="alumni"></div>
       </div>
       <div class="parallax p4"></div>
