adding faculty, almost completely done

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
               <div class="collapse row" id="majorsCollapse"></div>
             </div>
           </div>
+          <div class="col-12 text text-center">Faculty</div>
         </div>
       </div>
       <div class="parallax p3"></div>
