--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
             </div>
           </div>
           <div class="col-12 text text-center">Faculty</div>
+          <div class="col-12">
+            <div class="row justify-content-center" id="faculty"></div>
+          </div>
         </div>
       </div>
       <div class="parallax p3"></div>
@@ -200,7 +203,9 @@
         <div class="row">
           <div class="col-12 text text-center">Notable Alumni</div>
         </div>
-        <div class="row" id="alumni"></div>
+        <div class="col-12">
+          <div class="row justify-content-center" id="alumni"></div>
+        </div>
       </div>
       <div class="parallax p4"></div>
       <div class="heading h-4">
